# python-poetry

./: .gitignore  README.md  hello-world.py  pyproject.toml
learnml0010-add/: predict-sum.py  predict_additions.csv
