[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["kaunjovi <kaunjovi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
