[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["kaunjovi <kaunjovi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = {version = "^24.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
